log
Package wxwidgets was not found in the pkg-config search path.
Perhaps you should add the directory containing `wxwidgets.pc'
to the PKG_CONFIG_PATH environment variable
No package 'wxwidgets' found
Package wxwidgets was not found in the pkg-config search path.
Perhaps you should add the directory containing `wxwidgets.pc'
to the PKG_CONFIG_PATH environment variable
No package 'wxwidgets' found
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:14:
/usr/local/include/wx/defs.h:62:13: error: "No Target! You should use wx-config program for compilation flags!"
#           error "No Target! You should use wx-config program for compilation flags!"
            ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:14:
In file included from /usr/local/include/wx/defs.h:993:
/usr/local/include/wx/types.h:161:9: error: C++ requires a type specifier for all declarations
        wxCOMPILE_TIME_ASSERT( sizeof(int) == 4, IntMustBeExactly4Bytes);
        ^
/usr/local/include/wx/types.h:161:50: error: use of undeclared identifier 'IntMustBeExactly4Bytes'
        wxCOMPILE_TIME_ASSERT( sizeof(int) == 4, IntMustBeExactly4Bytes);
                                                 ^
/usr/local/include/wx/types.h:162:9: error: C++ requires a type specifier for all declarations
        wxCOMPILE_TIME_ASSERT( sizeof(size_t) == 4, SizeTMustBeExactly4Bytes);
        ^
/usr/local/include/wx/types.h:162:53: error: use of undeclared identifier 'SizeTMustBeExactly4Bytes'
        wxCOMPILE_TIME_ASSERT( sizeof(size_t) == 4, SizeTMustBeExactly4Bytes);
                                                    ^
/usr/local/include/wx/types.h:163:9: error: C++ requires a type specifier for all declarations
        wxCOMPILE_TIME_ASSERT( sizeof(void *) == 4, PtrMustBeExactly4Bytes);
        ^
/usr/local/include/wx/types.h:163:53: error: use of undeclared identifier 'PtrMustBeExactly4Bytes'
        wxCOMPILE_TIME_ASSERT( sizeof(void *) == 4, PtrMustBeExactly4Bytes);
                                                    ^
/usr/local/include/wx/types.h:166:17: warning: 'SIZEOF_SIZE_T' macro redefined [-Wmacro-redefined]
        #define SIZEOF_SIZE_T 4
                ^
/usr/local/include/wx/platform.h:379:17: note: previous definition is here
#        define SIZEOF_SIZE_T 8
                ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:14:
In file included from /usr/local/include/wx/defs.h:993:
/usr/local/include/wx/types.h:167:17: warning: 'SIZEOF_VOID_P' macro redefined [-Wmacro-redefined]
        #define SIZEOF_VOID_P 4
                ^
/usr/local/include/wx/platform.h:377:17: note: previous definition is here
#        define SIZEOF_VOID_P 8
                ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:14:
In file included from /usr/local/include/wx/defs.h:993:
/usr/local/include/wx/types.h:332:25: error: typedef redefinition with different types ('wxInt32' (aka 'int') vs '__darwin_ssize_t' (aka 'long'))
        typedef wxInt32 ssize_t;
                        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/_types/_ssize_t.h:31:33: note: previous definition is here
typedef __darwin_ssize_t        ssize_t;
                                ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:23:
In file included from /usr/local/include/wx/log.h:65:
/usr/local/include/wx/time.h:62:2: warning: using pseudo thread-safe wrapper for localtime to emulate localtime_r [-W#warnings]
#warning using pseudo thread-safe wrapper for localtime to emulate localtime_r
 ^
/usr/local/include/wx/time.h:72:2: warning: using pseudo thread-safe wrapper for gmtime to emulate gmtime_r [-W#warnings]
#warning using pseudo thread-safe wrapper for gmtime to emulate gmtime_r
 ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:24:
In file included from /usr/local/include/wx/event.h:22:
In file included from /usr/local/include/wx/cursor.h:14:
In file included from /usr/local/include/wx/bitmap.h:14:
/usr/local/include/wx/palette.h:18:43: error: unknown class name 'wxPaletteBase'; did you mean 'wxPalette'?
class WXDLLIMPEXP_CORE wxPalette : public wxPaletteBase
                                          ^~~~~~~~~~~~~
                                          wxPalette
/usr/local/include/wx/palette.h:18:24: note: 'wxPalette' declared here
class WXDLLIMPEXP_CORE wxPalette : public wxPaletteBase
                       ^
/usr/local/include/wx/palette.h:18:43: error: base class has incomplete type
class WXDLLIMPEXP_CORE wxPalette : public wxPaletteBase
                                   ~~~~~~~^~~~~~~~~~~~~
/usr/local/include/wx/palette.h:18:24: note: definition of 'wxPalette' is not complete until the closing '}'
class WXDLLIMPEXP_CORE wxPalette : public wxPaletteBase
                       ^
/usr/local/include/wx/palette.h:30:17: error: 'GetColoursCount' marked 'override' but does not override any member functions
    virtual int GetColoursCount() const wxOVERRIDE;
                ^
/usr/local/include/wx/palette.h:33:27: error: 'CreateGDIRefData' marked 'override' but does not override any member functions
    virtual wxGDIRefData *CreateGDIRefData() const wxOVERRIDE;
                          ^
/usr/local/include/wx/palette.h:34:27: error: 'CloneGDIRefData' marked 'override' but does not override any member functions
    virtual wxGDIRefData *CloneGDIRefData(const wxGDIRefData *data) const wxOVERRIDE;
                          ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:24:
In file included from /usr/local/include/wx/event.h:22:
In file included from /usr/local/include/wx/cursor.h:14:
/usr/local/include/wx/bitmap.h:25:39: error: unknown class name 'wxMaskBase'; did you mean 'wxListBase'?
class WXDLLIMPEXP_CORE wxMask: public wxMaskBase
                                      ^~~~~~~~~~
                                      wxListBase
/usr/local/include/wx/list.h:443:24: note: 'wxListBase' declared here
class WXDLLIMPEXP_BASE wxListBase
                       ^
In file included from main.cpp:5:
In file included from /usr/local/include/wx/wx.h:24:
In file included from /usr/local/include/wx/event.h:22:
In file included from /usr/local/include/wx/cursor.h:14:
/usr/local/include/wx/bitmap.h:59:5: error: unknown type name 'WXHBITMAP'
    WXHBITMAP GetHBITMAP() const ;
    ^
/usr/local/include/wx/bitmap.h:66:18: error: 'FreeData' marked 'override' but does not override any member functions
    virtual void FreeData() wxOVERRIDE;
                 ^
/usr/local/include/wx/bitmap.h:71:18: error: 'InitFromColour' marked 'override' but does not override any member functions
    virtual bool InitFromColour(const wxBitmap& bitmap,
                 ^
/usr/local/include/wx/bitmap.h:73:18: error: 'InitFromMonoBitmap' marked 'override' but does not override any member functions
    virtual bool InitFromMonoBitmap(const wxBitmap& bitmap) wxOVERRIDE;
                 ^
/usr/local/include/wx/bitmap.h:78:13: error: use of undeclared identifier 'CGContextRef'
    wxCFRef<CGContextRef> m_maskBitmap ;
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
4 warnings and 20 errors generated.
